--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						</div>
 						<div class="leaderboard-card__body">
 							<div class="text-center">
-								<img src="img/user2.jpg" class="circle-img mb-2" alt="User Img">
+								<img src="img/gabi.jpg" class="circle-img mb-2" alt="User Img">
 								<h5 class="mb-0">Gabi</h5>
 								<p class="text-muted mb-0">@AkiBetesziEgybűű</p>
 								<hr>
@@ -42,7 +42,7 @@
 						</div>
 						<div class="leaderboard-card__body">
 							<div class="text-center">
-								<img src="img/user1.jpg" class="circle-img mb-2" alt="User Img">
+								<img src="img/fagyi.jpg" class="circle-img mb-2" alt="User Img">
 								<h5 class="mb-0">Fagyi</h5>
 								<p class="text-muted mb-0">@Nyalnád</p>
 								<hr>
